k8s/main-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mainpage-service-deployment
  namespace: mainpage-namespace  # Match the Fargate namespace
  labels:
    node: local
spec:
  replicas: 1  # Two pods running the service
  selector:
    matchLabels:
      node: local
  template:
    metadata:
      labels:
        node: local
    spec:
      containers:
      - name: mainpage-service
        image: main-page-local-1:latest #<AWS_ACCOUNT_ID>.dkr.ecr.<AWS_DEFAULT_REGION>.amazonaws.com/iteamoa/mainpage:latest # Use ECR
        imagePullPolicy: Never
        ports:
        - containerPort: 8080  # Check container's exposed port
