k8s/main-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mainpage-service
  namespace: mainpage-namespace
spec:                                  
  selector:
    svc: mainpage
  ports:
    - protocol: TCP
      port: 80             # Public-facing port/Service port
      targetPort: 8080       # Container port
      nodePort: 30080
  type: NodePort            # Exposes the service
