k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  namespace: main-namespace
  annotations:
    kubernetes.io/ingress.class: "alb"
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:970547342771:certificate/18af3371-114a-43ca-87e4-f7328d131f67
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 443}]'
    alb.ingress.kubernetes.io/group.name: "backend-api"  
    alb.ingress.kubernetes.io/healthcheck-path: "/main/test"
spec:
  ingressClassName: alb
  rules:
  - host: iteamoa-api.brynnpark.cloud
    http:
      paths:
      - path: /main
        pathType: Prefix
        backend:
          service:
            name: mainpage-service
            port:
              number: 80
